# echokit_box

./: Cargo.toml  README.md  bt.html  espflash.toml  init.sh  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: rust_ci.yml
assets/: index.html
components/es8311/: CMakeLists.txt  myiic.c  wrapper.h
components/esp_sr/: bindgen.h
components/hal_driver/: CMakeLists.txt  es8311.c  es8311.h  lcd.c  lcd.h  myiic.h  wrapper.h  xl9555.c  xl9555.h
setup/: index.html  index_zh.html
src/: app.rs  audio.rs  bt.rs  hal.rs  main.rs  network.rs  protocol.rs  ui.rs  ws.rs
workshops/opencamp-202508/: README.md
