[package]
name = "esp32-s3-box-hello"
version = "0.1.0"
authors = ["csh <458761603@qq.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-s3-box-hello"
harness = false             # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
anyhow = "1.0"

esp-idf-svc = { version = "0.51.0", features = [
    "critical-section",
    "embassy-time-driver",
    "embassy-sync",
] }
# wav_io = "0.1.15"

rand = "0.8.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1"

# embedded-websocket = { version = "0.9.4" }
embedded-graphics = "0.8.1"
embedded-text = "0.7.2"
# async-io = "2.4.0"

u8g2-fonts = { version = "0.6.0", features = ["embedded_graphics_textstyle"] }
tinygif = "0.0.4"
# futures-lite = "2.6.0"

futures-util = { version = "0.3.31", features = ["sink"] }
# futures-sink = "0.3.31"

tokio = { version = "1.43.0", features = [
    "net",
    "rt",
    "time",
    "io-std",
    "io-util",
    "macros",
] }
tokio-websockets = { version = "0.8", features = [
    "client",
    "fastrand",
    "sha1_smol",
] }
bytes = "1.10.0"

[build-dependencies]
embuild = "0.33"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp-sr", version = "^2.0.0" }
bindings_header = "components/esp_sr/bindgen.h"
bindings_module = "esp_sr"

[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components/hal_driver"]
bindings_header = "components/hal_driver/wrapper.h"
bindings_module = "hal_driver"
